--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,6 @@
 <!--          <scope>runtime</scope>-->
       </dependency>
 
-
-
       <dependency>
 	    <groupId>jakarta.servlet</groupId>
 	    <artifactId>jakarta.servlet-api</artifactId>
@@ -111,8 +109,6 @@
           <artifactId>spring-tx</artifactId>
       </dependency>
 
-
-
       <dependency>
 	    <groupId>com.h2database</groupId>
 	    <artifactId>h2</artifactId>
@@ -126,7 +122,6 @@
     <version>8.0.33</version>
 	</dependency>
 
-	
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-databind</artifactId>
@@ -143,6 +138,44 @@
           <artifactId>log4j-core</artifactId>
           <version>2.23.0</version>
       </dependency>
+
+
+
+      <!-- Test -->
+
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-test</artifactId>
+          <scope>test</scope>
+      </dependency>
+
+<!--      <dependency>-->
+<!--          <groupId>org.junit.jupiter</groupId>-->
+<!--          <artifactId>junit-jupiter-api</artifactId>-->
+<!--          <version>5.10.1</version>-->
+<!--          <scope>test</scope>-->
+<!--      </dependency>-->
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.2</version>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest</artifactId>
+          <version>2.2</version>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>com.jayway.jsonpath</groupId>
+          <artifactId>json-path</artifactId>
+          <version>2.9.0</version>
+      </dependency>
+
+
 
 
 
