--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>    
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>/WEB-INF/main.xml</param-value>
+      <param-value>classpath:/main.xml</param-value>
     </init-param>
 <!--    <load-on-startup>1</load-on-startup>-->
   </servlet>
